# fifth

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.c  rebuild-release.sh  rebuild.sh
bench/: main.cpp
src/: armstrong_numbers.c  armstrong_numbers.h
tests/: test.cpp
